# cloud-identity-wallet

./: .cursorrules  .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .roorules  .windsurfrules  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE-MIT  README.md  animo-eudi-payments.pem  build.rs  cargo_err.txt  cargo_out.txt  deny.toml  docker-compose-kafka.yml  docker-compose.yml  openapi.yaml  test_api.sh  typos.toml
cloud-wallet-crypto/: Cargo.toml  README.md
cloud-wallet-crypto/src/: aead.rs  digest.rs  ecdsa.rs  ed25519.rs  error.rs  jwk.rs  lib.rs  rand.rs  rsa.rs  secret.rs  utils.rs
cloud-wallet-crypto/src/ecdsa/: tests.rs
cloud-wallet-crypto/src/jwk/: b64.rs  tests.rs
cloud-wallet-crypto/src/rsa/: tests.rs
cloud-wallet-events/: Cargo.toml  README.md
cloud-wallet-events/src/: bus.rs  error.rs  events.rs  lib.rs  traits.rs
cloud-wallet-events/src/bus/: kafka.rs  mod.rs
cloud-wallet-events/src/webhook/: delivery_queue.rs  delivery_service.rs  event_listener.rs  hmac_signer.rs  http_client.rs  mod.rs  payload_mapper.rs  retry_strategy.rs  schemas.rs  subscription.rs  subscription_repository.rs
cloud-wallet-kms/: Cargo.toml  README.md  build.rs
cloud-wallet-kms/src/: cache.rs  nonce.rs  utils.rs
cloud-wallet-kms/src/cache/: tests.rs
cloud-wallet-kms/src/key/: dek.rs  master.rs  mod.rs
cloud-wallet-kms/src/provider/: aws.rs  local.rs  mod.rs
cloud-wallet-kms/src/storage/: database.rs  memory.rs  mod.rs
cloud-wallet-kms/src/storage/migrations/: 001_create_dek_table.sql
cloud-wallet-kms/tests/: aws_provider.rs  aws_sqlx_e2e.rs  storage_backends.rs
cloud-wallet-kms/tests/common/: mod.rs
cloud-wallet-openid4vc/: Cargo.toml  build.rs
cloud-wallet-openid4vc/examples/: live_credential_storage.rs
cloud-wallet-openid4vc/migrations/: 0001_credentials.sql
cloud-wallet-openid4vc/src/: config.rs  credential.rs  encrypted_repository.rs  encryption.rs  errors.rs  format.rs  http.rs  issuer_metadata.rs  lib.rs  models.rs  postgres.rs  repository.rs  schema.rs  service.rs  validation.rs
cloud-wallet-openid4vc/src/credential/: canonical.rs  codec.rs  mod.rs  tenants.rs
cloud-wallet-openid4vc/src/http/: client.rs  request.rs  response.rs
cloud-wallet-openid4vc/src/issuance/: auth_server_metadata.rs  authorization_detail.rs  authorization_request.rs  authz_details.rs  authz_request.rs  authz_response.rs  authz_server_metadata.rs  claim_path_pointer.rs  client.rs  client_orig.rs  credential_configuration.rs  credential_formats.rs  credential_offer.rs  credential_request.rs  credential_response.rs  css_color.rs  error.rs  issuer_metadata.rs  mod.rs  notification.rs  pkce.rs  proofs.rs  query_params.rs  signing_algorithm.rs  token_request.rs  token_response.rs
cloud-wallet-openid4vc/src/issuance/client/: error.rs  mod.rs  signer.rs  tests.rs
cloud-wallet-openid4vc/src/issuance/resolution/: auth_server.rs  cache.rs  issuer.rs  mod.rs  offer.rs
cloud-wallet-openid4vc/src/issuance/session/: memory.rs  mod.rs  redis.rs  store.rs
cloud-wallet-openid4vc/src/issuance/utils/: allowed_chars.rs  helper.rs  mod.rs  pkce.rs
cloud-wallet-openid4vc/src/issuer/: credential_offer.rs  mod.rs
cloud-wallet-openid4vc/src/oid4vci/: mod.rs
cloud-wallet-openid4vc/src/oid4vci/authorization/: mod.rs  response.rs
cloud-wallet-openid4vc/src/oid4vci/credential/: configuration.rs  mod.rs  request.rs  response.rs
cloud-wallet-openid4vc/src/oid4vci/metadata/: issuer.rs  mod.rs
cloud-wallet-openid4vc/src/oid4vp/: mod.rs
cloud-wallet-openid4vc/src/oid4vp/authorization/: mod.rs  request.rs
cloud-wallet-openid4vc/src/oid4vp/dcql/: mod.rs  query.rs
cloud-wallet-openid4vc/src/oid4vp/metadata/: mod.rs  parameters.rs
cloud-wallet-openid4vc/src/oid4vp/presentation/: mod.rs  response.rs
cloud-wallet-openid4vc/src/openid4vci/: credential_offer.rs  issuer_metadata.rs  mod.rs
cloud-wallet-openid4vc/src/session/: memory.rs  mod.rs  model.rs  redis.rs  service.rs  store.rs
cloud-wallet-openid4vc/src/shared/: claim_path_pointer.rs  format_identifier.rs  mod.rs
cloud-wallet-openid4vc/src/storage/: database.rs  memory.rs  mod.rs  sql.rs
cloud-wallet-openid4vc/test_data/: issuer_metadata.json  keycloak_as_metadata.json
cloud-wallet-openid4vc/tests/: session_redis.rs  storage_backends.rs
cloud-wallet-openid4vc/tests/common/: mod.rs
cloud-wallet-openid4vc/tests_metadata/: issuer_metadata.json
crates/cloud-wallet-events/: Cargo.toml  README.md
crates/cloud-wallet-events/src/: audit_log.rs  bus.rs  error.rs  events.rs  lib.rs  logger.rs  traits.rs
crates/cloud-wallet-events/src/webhook/: delivery_queue.rs  delivery_service.rs  event_listener.rs  hmac_signer.rs  http_client.rs  mod.rs  retry_strategy.rs  schemas.rs  subscription.rs
crates/cloud-wallet-oid4vc/: Cargo.toml
crates/cloud-wallet-oid4vc/src/: models.rs  schema.rs  validation.rs
crates/cloud-wallet-openid4vc/: Cargo.toml
crates/cloud-wallet-openid4vc/src/: errors.rs  lib.rs  models.rs  schema.rs  validation.rs
crates/cloud-wallet-openid4vc/src/core/: claim_path_pointer.rs  client.rs  mod.rs  rfc7519.rs
crates/cloud-wallet-openid4vc/src/formats/: mod.rs
crates/cloud-wallet-openid4vc/src/haip/: error.rs  mod.rs  scheme.rs
crates/cloud-wallet-openid4vc/src/http/: client.rs
crates/cloud-wallet-openid4vc/src/issuance/: token_request.rs  token_response.rs
crates/cloud-wallet-openid4vc/src/oauth/: authorization.rs  client_metadata.rs  mod.rs
crates/cloud-wallet-openid4vc/src/oid4vci/: authz_details.rs  authz_request.rs  authz_response.rs  credential_configuration.rs  credential_request.rs  dpop.rs  issuer_metadata.rs  key_attestation.rs  mod.rs  proofs.rs  token_request.rs  token_response.rs  wallet_attestation.rs
crates/cloud-wallet-vc/: Cargo.toml
crates/cloud-wallet-vc/migrations/: 0001_credentials.sql
crates/cloud-wallet-vc/src/: config.rs  credential.rs  lib.rs  mongodb.rs  postgres.rs  repository.rs  service.rs
crates/wallet-events/: Cargo.toml
crates/wallet-events/src/: bus.rs  events.rs  lib.rs  traits.rs
(+324 files in other folders)
