[package]
name = "cloud-identity-wallet"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
exclude = ["/.github/*", "/assets/*", "/docs/*"]

[workspace]
resolver = "2"

members = [
  "cloud-wallet-crypto",
  "cloud-wallet-events",
  "cloud-wallet-kms",
  "cloud-wallet-openid4vc"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async utilities
async-trait = "0.1"
tokio = "1"

# Error handling
color-eyre = "0.6"
thiserror = "2"

# Serialization / Deserialization
base64ct = "1.8"
serde = "1"
serde_json = "1"
serde_with = "3"

# Logging and metrics
tracing = "0.1"

# Other utilities
dashmap = "6"
sqlx = "0.8"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
url = "2.5"
uuid = "1"
zeroize = "1.8"

[workspace.lints.clippy]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
color-eyre.workspace = true
thiserror.workspace = true
time.workspace = true
config = "0.15"
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Session Management
async-trait.workspace = true
bincode = "1.3"
dashmap = { workspace = true, optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "script"], optional = true }

[features]
default = ["session-memory"]
session-memory = ["dep:dashmap"]
session-redis = ["dep:redis"]

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.dev]
# Speed up compilation time
debug = 1

[profile.dev.package.sqlx-macros]
# Optimize sqlx-macros to avoid long compile times
opt-level = 3

[profile.release]
strip = "symbols"
lto = "fat"
# Abort on panic
panic = "abort"
# Maximize runtime speed
codegen-units = 1

# Security patches for transitive vulnerabilities
[patch.crates-io]
rustls-webpki = { git = "https://github.com/rustls/webpki.git", branch = "rel-0.101" }
