[package]
name = "cloud-identity-wallet"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
exclude = ["/.github/*", "/assets/*", "/docs/*"]

[workspace]
resolver = "2"

members = [
  "cloud-wallet-crypto",
  "cloud-wallet-events",
  "cloud-wallet-kms",
  "cloud-wallet-openid4vc"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async utilities
async-trait = "0.1"
tokio = "1"

# Error handling
color-eyre = "0.6"
jsonwebtoken = "10"
thiserror = "2"

# Serialization / Deserialization
base64ct = "1.8"
serde = "1"
serde_json = "1"
serde_with = "3"

# Logging and metrics
tracing = "0.1"

# Other utilities
base64 = "0.22"
dashmap = "6"
rand = "0.10"
sqlx = { version = "0.8", default-features = false }
time = "0.3"
url = "2.5"
uuid = "1"
zeroize = "1.8"

[workspace.lints.clippy]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[dependencies]
async-trait.workspace = true
axum = { version = "0.8", features = ["macros"] }
base64.workspace = true
cloud-wallet-crypto = { path = "cloud-wallet-crypto" }
cloud-wallet-kms = { path = "cloud-wallet-kms", features = ["local-kms"] }
cloud-wallet-openid4vc = { path = "cloud-wallet-openid4vc" }
color-eyre.workspace = true
config = "0.15"
dashmap.workspace = true
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
rand.workspace = true
secrecy = { version = "0.10", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dependencies.redis]
version = "1.2"
features = [
  "ahash",
  "connection-manager",
  "tls-rustls-webpki-roots",
  "tokio-rustls-comp"
]

[dependencies.sqlx]
workspace = true
features = [
  "any",
  "macros",
  "migrate",
  "mysql",
  "postgres",
  "runtime-tokio",
  "sqlite",
  "tls-rustls-aws-lc-rs"
]

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde_json = { workspace = true }
testcontainers-modules = { version = "0.15", features = [
  "mysql",
  "postgres",
  "redis"
] }
tower = { version = "0.5", features = ["util"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.dev]
# Speed up compilation time
debug = 1

[profile.dev.package.sqlx-macros]
# Optimize sqlx-macros to avoid long compile times
opt-level = 3

[profile.release]
strip = "symbols"
lto = "fat"
# Abort on panic
panic = "abort"
# Maximize runtime speed
codegen-units = 1
