[package]
name = "cloud-wallet-crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aws-lc-rs = "1.15"
base64ct = { workspace = true, features = ["alloc"], optional = true }
color-eyre.workspace = true
num-bigint = { version = "0.4", optional = true }
pkcs8 = { version = "0.10", features = ["std"] }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { version = "3", optional = true }
simple_asn1 = { version = "0.6", optional = true }
subtle = "2.6"
thiserror.workspace = true
url = { workspace = true, features = ["serde"], optional = true }
zeroize.workspace = true

[dev-dependencies]
hex-literal = "1"
serde_json = "1.0"

[features]
fips = ["aws-lc-rs/fips"]
jwk = ["base64ct", "num-bigint", "serde", "serde_with", "simple_asn1", "url"]

[lints]
workspace = true
