[package]
name = "wallet-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
futures = "0.3"
kafka = "0.10"
parking_lot = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dependencies.time]
workspace = true
features = ["formatting", "macros", "parsing", "serde"]

[dependencies.tokio]
workspace = true
features = ["macros", "net", "rt-multi-thread", "sync", "time"]
