[package]
name = "cloud-wallet-kms"
version = "0.1.0"
edition.workspace = true
readme = "README.md"
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["pollster"]

[dependencies]
# Common dependencies
async-trait.workspace = true
color-eyre.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, optional = true }
zeroize.workspace = true

# Cryptography dependencies
base64ct = { workspace = true, features = ["std"] }
cloud-wallet-crypto = { path = "../cloud-wallet-crypto" }
rand = "0.10"

# KMS AWS dependencies
aws-config = { version = "1", optional = true }
aws-sdk-kms = { version = "1", optional = true }

# Cache dependencies
ahash = "0.8"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "tls-rustls-aws-lc-rs"]
optional = true

[dev-dependencies]
pollster = { version = "0.4", features = ["macro"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies.testcontainers-modules]
version = "0.15"
features = ["localstack", "mysql", "postgres"]

[features]
default = ["local-kms", "memory-backend"]
aws-kms = ["dep:aws-config", "dep:aws-sdk-kms", "dep:tokio"]
local-kms = ["dep:tokio"]
memory-backend = []
mysql = ["sqlx-backend", "sqlx/mysql"]
postgres = ["sqlx-backend", "sqlx/postgres"]
sqlite = ["sqlx-backend", "sqlx/sqlite"]
sqlx-backend = ["dep:sqlx"]

[lints]
workspace = true

[profile.dev.package.sqlx-macros]
# Optimize sqlx-macros to avoid long compile times
opt-level = 3
