[package]
name = "cloud-wallet-kms"
version = "0.1.0"
edition.workspace = true
readme = "README.md"
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["pollster"]

[dependencies]
# Common dependencies
async-trait.workspace = true
color-eyre.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, optional = true }
zeroize.workspace = true

# Cryptography dependencies
base64ct = { workspace = true, features = ["std"] }
cloud-wallet-crypto = { path = "../cloud-wallet-crypto" }
rand.workspace = true

# KMS AWS dependencies
aws-sdk-kms = { version = "1", default-features = false, optional = true }

# Cache dependencies
ahash = "0.8"
dashmap.workspace = true
moka = { version = "0.12", features = ["future"] }

[dependencies.aws-config]
version = "1"
default-features = false
features = ["behavior-version-latest", "rt-tokio", "rustls"]
optional = true

[dependencies.sqlx]
workspace = true
features = ["any", "macros", "migrate", "runtime-tokio", "tls-rustls-aws-lc-rs"]
optional = true

[dev-dependencies]
pollster = { version = "0.4", features = ["macro"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies.testcontainers-modules]
version = "0.15"
features = ["localstack", "mysql", "postgres"]

[features]
default = ["local-kms", "memory-backend"]
aws-kms = ["dep:aws-config", "dep:aws-sdk-kms", "dep:tokio"]
local-kms = ["dep:tokio"]
memory-backend = []
mysql = ["sqlx-backend", "sqlx/mysql"]
postgres = ["sqlx-backend", "sqlx/postgres"]
sqlite = ["sqlx-backend", "sqlx/sqlite"]
sqlx-backend = ["dep:sqlx"]

[lints]
workspace = true
