[package]
name = "cloud-wallet-openid4vc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cloud-wallet-crypto = { path = "../cloud-wallet-crypto" }
cloud-wallet-kms = { path = "../cloud-wallet-kms", optional = true }

async-trait.workspace = true
base64 = "0.22"
color-eyre.workspace = true
csscolorparser = { version = "0.8", features = ["serde"] }
dashmap = { workspace = true, optional = true }
jsonwebtoken.workspace = true
percent-encoding = "2"
reqwest = { version = "0.13", features = ["form", "json", "rustls"] }
reqwest-middleware = { version = "0.5", features = ["json", "form"] }
reqwest-retry = "0.9"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_urlencoded = "0.7"
serde_with.workspace = true
thiserror.workspace = true
time.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

[dependencies.sqlx]
workspace = true
features = ["runtime-tokio", "tls-rustls-aws-lc-rs"]
optional = true

[dev-dependencies]
testcontainers-modules = { version = "0.15", features = ["mysql", "postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[features]
default = ["memory-repo"]
memory-repo = ["dep:cloud-wallet-kms", "dep:dashmap"]
mysql = ["dep:cloud-wallet-kms", "dep:sqlx", "sqlx/mysql"]
postgres = ["dep:cloud-wallet-kms", "dep:sqlx", "sqlx/postgres"]
sqlite = ["dep:cloud-wallet-kms", "dep:sqlx", "sqlx/sqlite"]
