[package]
name = "cloud-wallet-openid4vc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cloud-wallet-crypto = { path = "../cloud-wallet-crypto", features = ["jwk"] }

base64.workspace = true
color-eyre.workspace = true
csscolorparser = { version = "0.8", features = ["serde"] }
futures = "0.3"
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"] }
percent-encoding = "2"
reqwest = { version = "0.13", features = ["form", "json", "rustls"] }
reqwest-middleware = { version = "0.5", features = ["form", "json"] }
reqwest-retry = "0.9"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_urlencoded = "0.7"
serde_with.workspace = true
thiserror.workspace = true
time.workspace = true
tracing = "0.1"
url = { workspace = true, features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
