[package]
name = "wallet-events"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio-stream = "0.1"
tracing.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
futures = "0.3"
kafka = "0.10"
