[package]
name = "wallet-events"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
futures = "0.3"
kafka = "0.10"
parking_lot = "0.12"

# Webhook delivery dependencies
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.13", features = ["json"] }
tracing = { workspace = true }