[package]
name = "cloud-wallet-oid4vc"
version.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
jsonschema = "0.42"
serde_json = "1"
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid.workspace = true
time.workspace = true

[dev-dependencies]
serde_json = "1"