[package]
name = "cloud-wallet-oid4vc"
version.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
description = "OpenID4VCI credential domain model, schema definitions, and validation logic"

[features]
schema-validation = ["dep:jsonschema"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
uuid.workspace = true
time.workspace = true
jsonschema = { version = "0.29", optional = true }

[dev-dependencies]
serde_json = "1"