[package]
name = "cloud-wallet-openid4vc"
version = "0.1.0"
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
schema-validation = ["dep:jsonschema"]

[dependencies]
thiserror.workspace = true
color-eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
uuid.workspace = true
time.workspace = true
url.workspace = true
jsonschema = { version = "0.29", optional = true }
