[package]
name = "cloud-wallet-openid4vc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cloud-wallet-crypto = { path = "../cloud-wallet-crypto", features = ["jwk"] }

async-trait.workspace = true
base64.workspace = true
base64ct = { workspace = true, features = ["alloc"] }
ciborium = "0.2"
coset = "0.4"
color-eyre.workspace = true
csscolorparser = { version = "0.8", features = ["serde"] }
futures = "0.3"
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"] }
percent-encoding = "2"
reqwest = { version = "0.13", features = ["form", "json", "rustls"] }
reqwest-middleware = { version = "0.5", features = ["form", "json"] }
reqwest-retry = "0.9"
rustls-pki-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_urlencoded = "0.7"
serde_with.workspace = true
subtle.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["std", "parsing"] }
url = { workspace = true, features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
webpki-roots = "1"
webpki.workspace = true
x509-parser = "0.18"

[dev-dependencies]
rcgen.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
