[package]
name = "cloud-wallet-vc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verifiable Credential storage, issuance and presentation for the cloud-identity-wallet"
readme = "README.md"

[features]
default = ["postgres"]
# Enable PostgreSQL-backed credential repository
postgres = ["dep:sqlx"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }

# Optional: PostgreSQL persistence
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"], optional = true, default-features = false }
