[package]
name = "wallet-events"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures = "0.3"
kafka = "0.10"
tokio = { version = "1", features = ["sync", "rt", "macros", "net", "time"] }
tracing = "0.1"
