[package]
name = "wallet-events"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tokio.workspace = true
futures = "0.3"
kafka = "0.10"
